# internal/handlers/interaction_handler.go
@@ -5,9 +5,14 @@ import (
 	"net/http"
 	"strconv"
 
+	"fmt"
+	"strings"
+
+	"github.com/go-playground/validator/v10"
 	"github.com/google/uuid"
 	"github.com/gorilla/mux"
 	"github.com/trieuvy/video-ranking/internal/models"
+	"github.com/trieuvy/video-ranking/internal/params/request"
 	"github.com/trieuvy/video-ranking/internal/services"
 )
 
@@ -17,13 +22,15 @@ import (
 type InteractionHandler struct {
 	interactionService *services.InteractionService
 	videoService       *services.VideoService
+	userService       *services.UserService
 }
 
 // NewInteractionHandler creates a new interaction handler
-func NewInteractionHandler(interactionService *services.InteractionService, videoService *services.VideoService) *InteractionHandler {
+func NewInteractionHandler(interactionService *services.InteractionService, videoService *services.VideoService, userService *services.UserService) *InteractionHandler {
 	return &InteractionHandler{
 		interactionService: interactionService,
 		videoService:       videoService,
+		userService:       userService,
 	}
 }
 
@@ -33,18 +40,43 @@ func NewInteractionHandler(interactionService *services.InteractionService, vide
 // @Tags interactions
 // @Accept json
 // @Produce json
-// @Param interaction body models.Interaction true "Interaction object"
+// @Param interaction body request.Interaction true "Interaction object"
 // @Success 200 {object} models.Interaction
 // @Failure 400 {string} string "Bad request"
 // @Router /interactions [post]
 func (h *InteractionHandler) CreateInteraction(w http.ResponseWriter, r *http.Request) {
-	var interaction models.Interaction
+	var interaction request.Interaction
 	if err := json.NewDecoder(r.Body).Decode(&interaction); err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-
-	if err := h.interactionService.CreateInteraction(&interaction); err != nil {
+	var validate = validator.New()
+	err := validate.Struct(interaction)
+	if err != nil {
+		var sb strings.Builder
+		for _, e := range err.(validator.ValidationErrors) {
+			sb.WriteString(fmt.Sprintf("Field '%s' failed on the '%s' rule\n", e.Field(), e.Tag()))
+		}
+		http.Error(w, sb.String(), http.StatusBadRequest)
+		return
+	}
+	interactionModel := models.Interaction{
+		UserID:  interaction.UserID,
+		VideoID: interaction.VideoID,
+		Type:    interaction.Type,
+	}
+	
+	// Check if UserID exists
+	if _, err := h.userService.GetUser(interactionModel.UserID); err!= nil {
+		http.Error(w, "User not found", http.StatusNotFound)
+		return
+	}
+	// Check if VideoID exists
+	if _, err := h.videoService.GetVideo(interaction.VideoID); err!= nil {
+		http.Error(w, "Video not found", http.StatusNotFound)
+		return
+	}
+	if err := h.interactionService.CreateInteraction(&interactionModel); err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
@@ -76,7 +108,7 @@ func (h *InteractionHandler) CreateInteraction(w http.ResponseWriter, r *http.Re
 // @Accept json
 // @Produce json
 // @Param id path string true "Interaction ID"
-// @Success 200 {object} models.Interaction
+// @Success 200 {object} request.Interaction
 // @Failure 400 {string} string "Invalid interaction ID"
 // @Failure 404 {string} string "Interaction not found"
 // @Router /interactions/{id} [get]
@@ -141,8 +173,8 @@ func (h *InteractionHandler) GetUserVideoInteractions(w http.ResponseWriter, r *
 // @Accept json
 // @Produce json
 // @Param id path string true "Interaction ID"
-// @Param interaction body models.Interaction true "Updated interaction object"
-// @Success 200 {object} models.Interaction
+// @Param interaction body request.Interaction true "Updated interaction object"
+// @Success 200 {object} request.Interaction
 // @Failure 400 {string} string "Invalid interaction ID or data"
 // @Failure 500 {string} string "Internal server error"
 // @Router /interactions/{id} [put]
@@ -153,15 +185,28 @@ func (h *InteractionHandler) UpdateInteraction(w http.ResponseWriter, r *http.Re
 		http.Error(w, "Invalid interaction ID", http.StatusBadRequest)
 		return
 	}
-
-	var interaction models.Interaction
-	if err := json.NewDecoder(r.Body).Decode(&interaction); err != nil {
+	var interaction request.InteractionUpdate
+	if err = json.NewDecoder(r.Body).Decode(&interaction); err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-
-	interaction.ID = id
-	if err := h.interactionService.UpdateInteraction(&interaction); err != nil {
+	var validate = validator.New()
+	err = validate.Struct(interaction)
+	if err != nil {
+		var sb strings.Builder
+		for _, e := range err.(validator.ValidationErrors) {
+			sb.WriteString(fmt.Sprintf("Field '%s' failed on the '%s' rule\n", e.Field(), e.Tag()))
+		}
+		http.Error(w, sb.String(), http.StatusBadRequest)
+		return
+	}
+	interactionModel, err := h.interactionService.GetInteraction(id)
+	if err!= nil {
+		http.Error(w, "Video not found", http.StatusNotFound)
+		return
+	}
+	interactionModel.Content =  interaction.Content
+	if err := h.interactionService.UpdateInteraction(interactionModel); err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
@@ -198,17 +243,17 @@ func (h *InteractionHandler) DeleteInteraction(w http.ResponseWriter, r *http.Re
 		return
 	}
 	if interaction.Type == models.Like {
-		if err := h.videoService.ChangeLikesAmount(interaction.VideoID, 1); err != nil {
+		if err := h.videoService.ChangeLikesAmount(interaction.VideoID, -1); err != nil {
 			http.Error(w, err.Error(), http.StatusBadRequest)
 			return
 		}
 	} else if interaction.Type == models.View {
-		if err := h.videoService.ChangeViewsAmount(interaction.VideoID, 1); err != nil {
+		if err := h.videoService.ChangeViewsAmount(interaction.VideoID, -1); err != nil {
 			http.Error(w, err.Error(), http.StatusBadRequest)
 			return
 		}
 	} else if interaction.Type == models.Comment {
-		if err := h.videoService.ChangeCommentsAmount(interaction.VideoID, 1); err != nil {
+		if err := h.videoService.ChangeCommentsAmount(interaction.VideoID, -1); err != nil {
 			http.Error(w, err.Error(), http.StatusBadRequest)
 			return
 		}
