# internal/models/user.go
@@ -13,15 +13,20 @@ type User struct {
     Username  string    `gorm:"size:50;uniqueIndex;not null" json:"username"`
     Email     string    `gorm:"size:255;uniqueIndex;not null" json:"email"`
     Password  string    `gorm:"size:255;not null" json:"-"`
-    AvatarURL string    `gorm:"size:255" json:"avatar_url"`
     CreatedAt time.Time `json:"created_at"`
     UpdatedAt time.Time `json:"updated_at"`
 }
 
 // BeforeCreate đảm bảo ID được tạo trước khi lưu vào database
-func (u *User) BeforeCreate(tx *gorm.DB) error {
-    if u.ID == uuid.Nil {
-        u.ID = uuid.New()
-    }
-    return nil
+func (v *User) BeforeUpdate(tx *gorm.DB) error {
+	v.UpdatedAt = time.Now()
+	return nil
+}
+func (v *User) BeforeCreate(tx *gorm.DB) error {
+	if v.ID == uuid.Nil {
+		v.ID = uuid.New()
+	}
+	v.CreatedAt = time.Now()
+	v.UpdatedAt = time.Now()
+	return nil
 }
